Add functionality to remove games from a user collection
