# config/routes.rb
@@ -10,6 +10,7 @@ Rails.application.routes.draw do
       namespace :views do
         get 'collections', to: 'views#user_collections'
         post 'collections/games', to: 'views#add_game'
+        delete 'collections/games/:game_id', to: 'views#remove_game'
       end
     end
   end
